src/objects/b__c.object
<CustomObject>
    <fields>
        <fullName>AAddress__c</fullName>
        <formula>a__r.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>a__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>a</label>
        <referenceTo>a__c</referenceTo>
        <relationshipLabel>Bs</relationshipLabel>
        <relationshipName>Bs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>b</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>b Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>